--- a/base-driver/base-driver-opc-ua/src/main/resources/application.yml
+++ b/base-driver/base-driver-opc-ua/src/main/resources/application.yml
@@ -19,7 +19,7 @@ driver:
   name: OpcUa驱动
   code: OpcUaDriver
   type: DRIVER
-  remark: @project.description@
+#  remark: @project.description@
   schedule:
     # 定时读数据
     read:
