--- a/base-common/base-common-redis/src/main/resources/application-redis.yml
+++ b/base-common/base-common-redis/src/main/resources/application-redis.yml
@@ -18,9 +18,9 @@
 # 如果想要覆盖以下内容需要在dev、test、pre、pro中进行重新配置
 spring:
   redis:
-    host: ${REDIS_HOST:dc3-redis}
+    host: ${REDIS_HOST:tmmes-redis}
     port: ${REDIS_PORT:6379}
-    password: ${REDIS_PASSWORD:dc3}
+    password: ${REDIS_PASSWORD:}
     timeout: 15S
     lettuce:
       pool:
@@ -28,4 +28,4 @@ spring:
         min-idle: 4
   cache:
     type: redis
-    cache-names: dc3-cache
+    cache-names: tmmes-cache
