--- a/base-center/base-center-data/Dockerfile
+++ b/base-center/base-center-data/Dockerfile
@@ -15,8 +15,10 @@
 #
 
 # runtime
-FROM registry.cn-beijing.aliyuncs.com/dc3/alpine-java:dragonwell-8.13.14 AS runtime
-MAINTAINER pnoker <pnokers.icloud.com>
+#FROM registry.cn-beijing.aliyuncs.com/dc3/alpine-java:dragonwell-8.13.14 AS runtime
+#MAINTAINER pnoker <pnokers.icloud.com>
+
+FROM openjdk:8
 
 ENV JAVA_OPS -server \
              -Xms128m \
@@ -34,16 +36,16 @@ ENV GC_LOG   -XX:+PrintGCDetails \
              -XX:+UseGCLogFileRotation \
              -XX:NumberOfGCLogFiles=10 \
              -XX:GCLogFileSize=10M \
-             -Xloggc:dc3/logs/center/data/gc/dc3-center-data.log
+             -Xloggc:tmmes/logs/center/data/gc/base-center-data.log
 
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
 
-WORKDIR /dc3-center/dc3-center-data
+WORKDIR /base-center/base-center-data
 
-ADD ./target/dc3-center-data.jar ./
+ADD ./target/base-center-data.jar ./
 
 EXPOSE 8500
-VOLUME /dc3-center/dc3-center-data/dc3/logs
+VOLUME /base-center/base-center-data/dc3/logs
 
-CMD mkdir -p /dc3-center/dc3-center-data/dc3/logs/center/data/gc \
-    && java ${JAVA_OPS} ${GC_LOG} -jar dc3-center-data.jar
+CMD mkdir -p /base-center/base-center-data/tmmes/logs/center/data/gc \
+    && java ${JAVA_OPS} ${GC_LOG} -jar base-center-data.jar
