--- a/base-center/base-center-manager/src/main/resources/application-dev.yml
+++ b/base-center/base-center-manager/src/main/resources/application-dev.yml
@@ -22,7 +22,7 @@ spring:
     dynamic:
       datasource:
         master:
-          url: jdbc:mysql://${DB_HOST:tmmes-mysql}:${MYSQL_PORT:53306}/${DB_NAME:mes}?allowPublicKeyRetrieval=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
+          url: jdbc:mysql://${DB_HOST:tmmes-mysql}:${MYSQL_PORT:3306}/${DB_NAME:mes}?allowPublicKeyRetrieval=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai
           username: ${DB_USERNAME:root}
           password: ${DB_PASSWORD:root}
   rabbitmq:
@@ -33,7 +33,14 @@ spring:
     password: ${RABBITMQ_PASSWORD:admin}
   redis:
     host: ${REDIS_HOST:tmmes-redis}
-    port: ${REDIS_PORT:56379}
+    port: ${REDIS_PORT:6379}
+  data:
+    mongodb:
+      host: ${MONGO_HOST:tmmes-mongo}
+      port: ${MONGO_PORT:27017}
+      database: ${MONGO_DATABASE:tmmes}
+#      username: ${MONGO_USERNAME:tmmes}
+#      password: ${MONGO_PASSWORD:tmmes}
 #    password: ${REDIS_PASSWORD:dc3}
   cache:
     redis:
