--- a/pom.xml
+++ b/pom.xml
@@ -81,8 +81,8 @@
 		<modbus.version>3.1.0</modbus.version>
 		<apache.poi.version>5.2.3</apache.poi.version>
 		<netty.version>4.1.90.Final</netty.version>
-		<grpc.version>1.66.0</grpc.version>
-		<grpc.spring.boot.version>2.14.0.RELEASE</grpc.spring.boot.version>
+		<grpc.version>1.58.0</grpc.version>
+		<grpc.spring.boot.version>2.15.0.RELEASE</grpc.spring.boot.version>
 		<protoc.version>3.22.0</protoc.version>
 		<j.interop.version>2.0.4</j.interop.version>
 		<bouncycastle.version>1.46</bouncycastle.version>
@@ -320,12 +320,13 @@
 			</dependency>
 
 			<!-- gRpc 依赖 -->
+			<!-- gRpc import change compile -->
 			<dependency>
 				<groupId>io.grpc</groupId>
 				<artifactId>grpc-bom</artifactId>
 				<version>${grpc.version}</version>
 				<type>pom</type>
-				<scope>import</scope>
+				<scope>compile</scope>
 			</dependency>
 
 			<!-- gRpc -->
