--- a/base-common/base-common-rabbitmq/src/main/resources/application-rabbit.yml
+++ b/base-common/base-common-rabbitmq/src/main/resources/application-rabbit.yml
@@ -18,11 +18,11 @@
 # 如果想要覆盖以下内容需要在dev、test、pre、pro中进行重新配置
 spring:
   rabbitmq:
-    virtual-host: ${RABBITMQ_VIRTUAL_HOST:dc3}
-    host: ${RABBITMQ_HOST:dc3-rabbitmq}
+    virtual-host: ${RABBITMQ_VIRTUAL_HOST:tmmes}
+    host: ${RABBITMQ_HOST:base-rabbitmq}
     port: ${RABBITMQ_PORT:5672}
-    username: ${RABBITMQ_USERNAME:dc3}
-    password: ${RABBITMQ_PASSWORD:dc3}
+    username: ${RABBITMQ_USERNAME:admin}
+    password: ${RABBITMQ_PASSWORD:admin}
     publisher-confirm-type: correlated
     publisher-returns: true
     listener:
